--- a/src/field-guide/field-guide.css
+++ b/src/field-guide/field-guide.css
@@ -21,10 +21,11 @@
 }
 
 .action-button {
-    background-color: lightblue;
+    /* background-color: lightblue; */
     border-radius: 35px;
     height: 70px;
     width: 70px;
+    outline-style: none;
     /* padding: 0.6em; */
     /* margin-top: 0.6em; */
 }
