--- a/src/greenhouse/greenhouse.css
+++ b/src/greenhouse/greenhouse.css
@@ -28,7 +28,7 @@
 }
 
 .action-button {
-    background-color: lightblue;
+    /* background-color: lightblue; */
     border-radius: 35px;
     height: 70px;
     width: 70px;
