Switch views when plant button is clicked

--- a/src/greenhouse/greenhouse.css
+++ b/src/greenhouse/greenhouse.css
@@ -4,6 +4,13 @@
     /* justify-content: right; */
 }
 
+.inactive-parent {
+    display: flex;
+    flex-direction: row;
+    align-content: end;
+    flex: 1;
+}
+
 .shelves {
     flex: 1 200px;
     display: grid;
