--- a/src/app.css
+++ b/src/app.css
@@ -16,8 +16,8 @@ header {
     min-height: 80px;
 
     /* flex: 0 80px; */
-    background-color: #d7d8d9;
-    /* background-color: #799567; */
+    /* background-color: #d7d8d9; */
+    background-color: #869f77;
 
     /* padding: 0; */
 
@@ -47,7 +47,7 @@ nav {
     flex: 0 calc(100vw/3);
     /* display: flex;
     flex-direction: row; */
-    /* align-content: center; */
+    align-content: center;
 }
 
 menu {
